[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autolitreview-agent"
version = "0.1.0"
description = "An open-source agent for citation-grounded, abstract-based academic literature review"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "AutoLitReview-Agent Contributors"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "requests>=2.31.0",
    "httpx>=0.25.0",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
    "rispy>=0.8.0",
    "bibtexparser>=1.4.0",
    "pandas>=2.1.0",
    "tqdm>=4.66.0",
    "tenacity>=8.2.0",
    "tiktoken>=0.5.0",
    "openai>=1.6.0",
    "jinja2>=3.1.0",
    "rich>=13.7.0",
    "typer>=0.9.0",
    "orjson>=3.9.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
ui = [
    "streamlit>=1.29.0",
    "fastapi>=0.108.0",
    "uvicorn>=0.25.0",
]
docx = [
    "python-docx>=1.1.0",
]
pdf = [
    "pymupdf>=1.23.0",
]
scholar = [
    "scholarly>=1.7.0",
]
biomedical = [
    "biopython>=1.83",
    "arxiv>=2.1.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
]

[project.scripts]
autolitreview = "main:app"

[tool.setuptools.packages.find]
include = [
    "agents*",
    "retriever*",
    "query*",
    "parser*",
    "analyzer*",
    "output*",
    "utils*",
    "models*",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
